--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@ng-bootstrap/ng-bootstrap": "^17.0.1",
+    "angular-material-icons": "^0.7.1",
     "bootstrap-icons": "^1.11.3",
     "primeng": "^17.18.11",
     "rxjs": "~7.8.0",
