--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ng-bootstrap/ng-bootstrap": "^17.0.1",
     "angular-material-icons": "^0.7.1",
     "bootstrap-icons": "^1.11.3",
+    "ngx-clarity": "^2.2.0",
     "ngx-matomo-client": "^6.3.1",
     "primeng": "^17.18.11",
     "rxjs": "~7.8.0",
