--- a/angular.json
+++ b/angular.json
@@ -29,9 +29,7 @@
             "styles": [
               "node_modules/@angular/material/prebuilt-themes/rose-red.css",
               "src/styles.css",
-              "node_modules/bootstrap-icons/font/bootstrap-icons.css",
-              "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
-              "node_modules/primeng/resources/primeng.min.css"
+              "node_modules/bootstrap-icons/font/bootstrap-icons.css"
             ],
             "scripts": [
             ]
