--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,7 @@
               }
             ],
             "styles": [
-              "node_modules/@angular/material/prebuilt-themes/rose-red.css",
+              "@angular/material/prebuilt-themes/rose-red.css",
               "src/styles.css",
               "node_modules/bootstrap-icons/font/bootstrap-icons.css"
             ],
