--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "angular-material-icons": "^0.7.1",
     "bootstrap-icons": "^1.11.3",
     "ngx-clarity": "^2.2.0",
+    "resend": "^4.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
