--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
+    "@emailjs/browser": "^4.4.1",
     "@ng-bootstrap/ng-bootstrap": "^17.0.1",
     "angular-material-icons": "^0.7.1",
     "bootstrap-icons": "^1.11.3",
