--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "chmod +x ./build-env.sh && ./build-env.sh && ng build",
+    "build:prod": "chmod +x ./build-env.sh && ./build-env.sh && ng build --configuration production",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
