--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "angular-material-icons": "^0.7.1",
     "bootstrap-icons": "^1.11.3",
     "ngx-clarity": "^2.2.0",
+    "node-fetch": "^3.3.2",
     "resend": "^4.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
