--- a/.github/workflows/auto-update-links.yml
+++ b/.github/workflows/auto-update-links.yml
@@ -2,8 +2,7 @@ name: Auto update links and push
 
 on:
   schedule:
-    # Ejecuta todos los días a las 12:00 UTC (= 14:00 CEST todo el año)
-    - cron: '0 12 * * *'
+    - cron: "0 12 * * *"   # 14:00h
   workflow_dispatch:
 
 jobs:
@@ -15,12 +14,15 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          ref: master
+          fetch-depth: 0
 
       - name: Set up Node
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
-          cache: 'npm'
+          node-version: "20"
+          cache: "npm"
 
       - name: Install dependencies
         run: npm ci
@@ -28,13 +30,14 @@ jobs:
       - name: Genera links.json actualizado
         run: node scripts/actualizar_links.js
 
-      - name: Comitea si hay cambios en links.json
+      - name: Commit y push con rebase (si hay cambios)
         run: |
-          git config --local user.name "GitHub Actions"
-          git config --local user.email "actions@github.com"
+          git config user.name "GitHub Actions"
+          git config user.email "actions@github.com"
           if [[ -n "$(git status --porcelain src/assets/links.json)" ]]; then
             git add src/assets/links.json
             git commit -m "chore: auto-update links.json [skip ci]"
+            git pull --rebase origin master    # cambia a main si procede
             git push
           else
             echo "No hay cambios en links.json, salto commit."
