Refactor workflow y gitattributes para mejorar el seguimiento y la verificación de links.json

--- a/.github/workflows/auto-update-links.yml
+++ b/.github/workflows/auto-update-links.yml
@@ -2,7 +2,7 @@ name: Auto update links and push
 
 on:
   schedule:
-    - cron: "0 12 * * *"   # 14:00 España
+    - cron: "0 12 * * *"   # 14:00 España (12:00 UTC)
   workflow_dispatch:
 
 jobs:
@@ -15,7 +15,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          ref: master       # o main si procede
+          ref: master          # cambia a 'main' si tu rama es main
           fetch-depth: 0
 
       - name: Set up Node
@@ -30,21 +30,42 @@ jobs:
       - name: Genera links.json actualizado
         run: node scripts/actualizar_links.js
 
-      - name: Ver cambios detectados por git
+      - name: Verifica ruta y hash del archivo
+        run: |
+          echo "Listado de src/assets:"
+          ls -la src/assets || true
+          echo "Hash de links.json:"
+          sha1sum src/assets/links.json || true
+
+      - name: Muestra diff detectado por git
         run: |
           git status
+          echo "Diff de links.json:"
           git --no-pager diff -- src/assets/links.json || true
-          echo "Estado porclean: $(git status --porcelain src/assets/links.json | wc -l) líneas"
+          echo "Porcelain count:"
+          git status --porcelain src/assets/links.json | wc -l
 
-      - name: Commit y push con rebase (si hay cambios)
+      - name: Asegura tracking de links.json (si está untracked)
+        run: |
+          if [[ -n "$(git ls-files --others --exclude-standard src/assets/links.json)" ]]; then
+            echo "links.json está untracked; forzando add inicial"
+            git add -f src/assets/links.json
+            git commit -m "chore: start tracking links.json"
+          else
+            echo "links.json ya está trackeado"
+          fi
+
+      - name: Commit y push con rebase (si hay cambios reales)
         run: |
           git config user.name "GitHub Actions"
           git config user.email "actions@github.com"
-          if [[ -n "$(git status --porcelain src/assets/links.json)" ]]; then
+          CHANGED=$(git diff --name-only src/assets/links.json)
+          if [[ "$CHANGED" == "src/assets/links.json" ]]; then
+            echo "Hay cambios en links.json; procediendo a commit"
             git add src/assets/links.json
             git commit -m "chore: auto-update links.json [skip ci]"
             git pull --rebase origin master   # cambia a main si procede
             git push
           else
-            echo "No hay cambios en links.json, salto commit."
+            echo "No hay cambios en links.json según git diff; salto commit."
           fi
