--- a/.github/workflows/auto-update-links.yml
+++ b/.github/workflows/auto-update-links.yml
@@ -2,7 +2,9 @@ name: Auto update links and push
 
 on:
   schedule:
-    - cron: "55 11 * * *"  # 13:55h
+    - cron: "50 12 * * *"  # 13:50h todos los días (UTC+1)
+    - cron: "30 16 * * 0,6"  # 17:30h sábados y domingos (UTC+1)
+    - cron: "0 18 * * 0,6"  # 19:00h sábados y domingos (UTC+1)
   workflow_dispatch:
 
 jobs:
