chore: actualizar mensaje de commit para auto-actualización de links.json

--- a/.github/workflows/auto-update-links.yml
+++ b/.github/workflows/auto-update-links.yml
@@ -58,6 +58,6 @@ jobs:
           git config user.name "GitHub Actions"
           git config user.email "actions@github.com"
           git add src/assets/links.json
-          git commit -m "chore: auto-update links.json [skip ci]"
+          git commit -m "Auto update links.json [GitHub Actions]"
           git pull --rebase origin master
           git push
