--- a/.github/workflows/auto-update-links.yml
+++ b/.github/workflows/auto-update-links.yml
@@ -59,5 +59,5 @@ jobs:
           git config user.email "actions@github.com"
           git add src/assets/links.json
           git commit -m "Auto update links.json [GitHub Actions]"
-          git pull --rebase origin master
+          git pull --rebase --autostash origin master
           git push
